kubernetes-networks/canary/canary-deploys.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: production
  template:
    metadata:
      labels: 
        app: production
    spec:
      volumes:
      - name: app
        emptyDir: {}
      containers: 
      - name: production
        image: puzyrevyaroslav/nginx_otus_hw_1:latest
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket:
            port: 8000
        imagePullPolicy: Always
        volumeMounts:
        - name: app
          mountPath: /app
        - name: cache
          mountPath: /var/cache/nginx
        - name: pid
          mountPath: /run
        - name: logs
          mountPath: /var/log/nginx
      volumes:
      - name: app
        emptyDir: {}
      - name: cache
        emptyDir: {}
      - name: pid
        emptyDir: {}
      - name: logs
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels: 
        app: canary
    spec:
      volumes:
      - name: app
        emptyDir: {}
      containers: 
      - name: canary
        image: puzyrevyaroslav/nginx_otus_hw_1:latest
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket:
            port: 8000
        imagePullPolicy: Always
        volumeMounts:
        - name: app
          mountPath: /app
        - name: cache
          mountPath: /var/cache/nginx
        - name: pid
          mountPath: /run
        - name: logs
          mountPath: /var/log/nginx
      volumes:
      - name: app
        emptyDir: {}
      - name: cache
        emptyDir: {}
      - name: pid
        emptyDir: {}
      - name: logs
        emptyDir: {}
