kubernetes-networks/canary/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: canary-hm.example
    http:
      paths:
      - pathType: Prefix
        path: /web/
        backend:
          service:
            name: production
            port: 
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"  
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
  - host: canary-hm.example
    http:
      paths:
      - pathType: Prefix
        path: /web/
        backend:
          service:
            name: canary
            port: 
              number: 8000
